[gd_scene format=3 uid="uid://dysl4qvaovevq"]

[ext_resource type="Shader" uid="uid://bo1xwelst8wme" path="res://addons/godot-xr-tools/effects/fade.gdshader" id="1_00tjw"]
[ext_resource type="Script" uid="uid://d3c0kdu0y1fic" path="res://Player/player.gd" id="1_apopc"]
[ext_resource type="PackedScene" uid="uid://bpdj5njb8nhot" path="res://addons/godot-xr-tools/hands/scenes/highpoly/left_fullglove_hand.tscn" id="2_fhl08"]
[ext_resource type="PackedScene" uid="uid://b4ysuy43poobf" path="res://addons/godot-xr-tools/functions/function_pickup.tscn" id="2_gwnis"]
[ext_resource type="Script" uid="uid://g1hsxte6q8r" path="res://UI/PlayerUI/Fade.gd" id="2_x3vf3"]
[ext_resource type="Material" uid="uid://c1mchr3k7irl" path="res://Shaders/Materials/Hand.tres" id="3_vtle1"]
[ext_resource type="PackedScene" uid="uid://cqhw276realc" path="res://addons/godot-xr-tools/functions/function_pointer.tscn" id="4_00tjw"]
[ext_resource type="Script" uid="uid://covp6418gkimy" path="res://Player/haptics_manager.gd" id="4_fhl08"]
[ext_resource type="PackedScene" uid="uid://d1tl07geqm5xq" path="res://addons/godot-xr-tools/hands/scenes/highpoly/right_fullglove_hand.tscn" id="4_od3ui"]
[ext_resource type="Script" uid="uid://b1dtx7o3p7qgq" path="res://addons/godot-xr-tools/rumble/rumbler.gd" id="5_vtle1"]
[ext_resource type="Script" uid="uid://cuf42fufnnrds" path="res://addons/godot-xr-tools/rumble/rumble_event.gd" id="6_od3ui"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x3vf3"]
render_priority = 0
shader = ExtResource("1_00tjw")
shader_parameter/albedo = Color(0, 0, 0, 0)

[sub_resource type="QuadMesh" id="QuadMesh_od3ui"]
size = Vector2(2, 2)

[sub_resource type="Resource" id="Resource_fhl08"]
script = ExtResource("6_od3ui")
duration_ms = 50
metadata/_custom_type_script = "uid://cuf42fufnnrds"

[sub_resource type="Resource" id="Resource_vtle1"]
script = ExtResource("6_od3ui")
magnitude = 0.2
duration_ms = 10
metadata/_custom_type_script = "uid://cuf42fufnnrds"

[sub_resource type="Resource" id="Resource_x3vf3"]
script = ExtResource("6_od3ui")
magnitude = 0.4
duration_ms = 20
metadata/_custom_type_script = "uid://cuf42fufnnrds"

[sub_resource type="Resource" id="Resource_od3ui"]
script = ExtResource("6_od3ui")
magnitude = 0.2
duration_ms = 10
metadata/_custom_type_script = "uid://cuf42fufnnrds"

[node name="Player" type="XROrigin3D" unique_id=1709512524]
script = ExtResource("1_apopc")

[node name="XRCamera3D" type="XRCamera3D" parent="." unique_id=1005326857 groups=["XRCamera3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.0718591, 0)

[node name="Fade" type="MeshInstance3D" parent="XRCamera3D" unique_id=645598595 groups=["Fade"]]
material_override = SubResource("ShaderMaterial_x3vf3")
mesh = SubResource("QuadMesh_od3ui")
script = ExtResource("2_x3vf3")
fade_material = SubResource("ShaderMaterial_x3vf3")

[node name="LeftHand" type="XRController3D" parent="." unique_id=291603510]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, -0.5)
tracker = &"left_hand"

[node name="FunctionPickup" parent="LeftHand" unique_id=988206081 instance=ExtResource("2_gwnis")]
grab_distance = 0.1
ranged_enable = false

[node name="LeftHand" parent="LeftHand" unique_id=262369141 instance=ExtResource("2_fhl08")]
hand_material_override = ExtResource("3_vtle1")

[node name="FunctionPointer" parent="LeftHand" unique_id=35043123 instance=ExtResource("4_00tjw")]
show_laser = 2
laser_length = 1
show_target = true

[node name="RightHand" type="XRController3D" parent="." unique_id=1415243163]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, -0.5)
tracker = &"right_hand"

[node name="FunctionPickup" parent="RightHand" unique_id=1995802462 instance=ExtResource("2_gwnis")]
grab_distance = 0.1
ranged_enable = false

[node name="RightHand" parent="RightHand" unique_id=1841102392 instance=ExtResource("4_od3ui")]
hand_material_override = ExtResource("3_vtle1")

[node name="FunctionPointer" parent="RightHand" unique_id=1547018383 instance=ExtResource("4_00tjw")]
show_laser = 2
laser_length = 1
show_target = true

[node name="HapticsManager" type="Node" parent="." unique_id=698386841]
script = ExtResource("4_fhl08")

[node name="PickUpRumbler" type="Node" parent="HapticsManager" unique_id=1574065087]
script = ExtResource("5_vtle1")
event = SubResource("Resource_fhl08")
metadata/_custom_type_script = "uid://b1dtx7o3p7qgq"

[node name="HoverItemRumbler" type="Node" parent="HapticsManager" unique_id=7134099]
script = ExtResource("5_vtle1")
event = SubResource("Resource_vtle1")
metadata/_custom_type_script = "uid://b1dtx7o3p7qgq"

[node name="PointerPressedRumbler" type="Node" parent="HapticsManager" unique_id=873174623]
script = ExtResource("5_vtle1")
event = SubResource("Resource_x3vf3")
metadata/_custom_type_script = "uid://b1dtx7o3p7qgq"

[node name="PointerHoverRumbler" type="Node" parent="HapticsManager" unique_id=719156472]
script = ExtResource("5_vtle1")
event = SubResource("Resource_od3ui")
metadata/_custom_type_script = "uid://b1dtx7o3p7qgq"

[connection signal="button_pressed" from="LeftHand" to="." method="_on_trigger_button_pressed"]
[connection signal="has_hover_entered" from="LeftHand/FunctionPickup" to="HapticsManager" method="_on_left_hand_hover_entered"]
[connection signal="has_picked_up" from="LeftHand/FunctionPickup" to="HapticsManager" method="_on_left_hand_picked_up"]
[connection signal="pointing_event" from="LeftHand/FunctionPointer" to="HapticsManager" method="_on_left_function_pointer_pointing_event"]
[connection signal="button_pressed" from="RightHand" to="." method="_on_trigger_button_pressed"]
[connection signal="has_hover_entered" from="RightHand/FunctionPickup" to="HapticsManager" method="_on_right_hand_hover_entered"]
[connection signal="has_picked_up" from="RightHand/FunctionPickup" to="HapticsManager" method="_on_right_hand_picked_up"]
[connection signal="pointing_event" from="RightHand/FunctionPointer" to="HapticsManager" method="_on_right_function_pointer_pointing_event"]
